<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Awesome Citizen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_reward">RewardActivity</string>
    <string name="title_activity_notification_action">NotificationActionActivity</string>
    <string name="add_reward">Keep For Later</string>
    <string name="buy_paypal">Order With Paypal</string>
    <string name="title_activity_paypal">PaypalActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="restaurant_title">Awesome Restaurant!</string>
    <string name="restaurant_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="Transaction_complete">Transaction Complete!</string>
    <string name="Welcome">Welcome</string>
    <string name="start_geo_fence">Start Monitoring</string>
    <string name="awesome_citizen">Awesome Citizen</string>
    <string name="order_in_progress">Order in Progress</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="offer_added">Special Offer Added!</string>
    <string name="time_to_redeem">Redeem in 5:54 Minutes!</string>
    <string name="order_with_paypal">Order Now With Paypal - $5</string>

</resources>
