<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.thirtydaylabs.awesomecitizen.RewardActivity$PlaceholderFragment">

    <TextView
        android:text="@string/offer_added"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/time_to_redeem"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/crispy_fish"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Crispy Fish For Only $5"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textColor="#ec004fbe"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textSize="25dp"
        android:background="#ff1d9ec7"
        android:text="@string/order_with_paypal"/>

</LinearLayout>
